--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="caixa-principal">
         <h1>Desmatamento para o uso do cultivo</h1>
         <div class="caixa-perguntas">
-            Você já sabe quais são as perguntas que irão nortear sua missão ?
+            Em relção ao desmatamento você prefere?
         </div>
         <div class="caixa-alternativas">
             <button>Sim, eu já sei</button>
