--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             Em relção ao desmatamento você prefere?
         </div>
         <div class="caixa-alternativas">
-            <button>Sim, eu já sei</button>
+            <button>Não cometer o desmatamento e reutilizar áreas já desmatadas</button>
             <button>Não, estou ajustando algumas coisas</button>
         </div>
         <div class="caixa-resultado">
