--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="caixa-alternativas">
             <button>Não cometer o desmatamento e reutilizar áreas já desmatadas</button>
-            <button>Não, estou ajustando algumas coisas</button>
+            <button>Desmatar uma área e replantar em outro local</button>
         </div>
         <div class="caixa-resultado">
             <p class="texto-resultado">
