--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="caixa-resultado">
             <p class="texto-resultado">
-                E o seu texto final, já está pronto ?
+                Diante disso como está a sua conciência?
             </p>
         </div>
     </div>
